# zweihander

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
plugins/mermaid-diagrams/: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
plugins/mermaid-diagrams/.claude-plugin/: plugin.json
plugins/mermaid-diagrams/.codex-plugin/: plugin.json
plugins/mermaid-diagrams/plugin_maintenance/: __init__.py  generated_docs.py  mermaid_navigation.json  sync.py
plugins/mermaid-diagrams/plugin_maintenance/templates/: mermaid_skill.md  readme.md
plugins/mermaid-diagrams/scripts/: sync-mermaid-docs.mjs  update-generated-docs.mjs
plugins/mermaid-diagrams/skills/mermaid/: SKILL.md
plugins/mermaid-diagrams/skills/mermaid-lint/: SKILL.md
plugins/mermaid-diagrams/skills/mermaid-lint/references/: linter_output_schema.json
plugins/mermaid-diagrams/skills/mermaid-lint/references/ai-assistant-harnesses/: claude-code.md  codex.md
plugins/mermaid-diagrams/skills/mermaid/assets/: choice_report_template.html
plugins/mermaid-diagrams/skills/mermaid/references/: architecture.md  classDiagram.md  config-directives.md  cynefin.md  eventmodeling.md  flowchart.md  gantt.md  ishikawa.md  pie.md  railroad.md  sankey.md  sequenceDiagram.md  stateDiagram.md  timeline.md  treeView.md  venn.md  wardley.md  xyChart.md
tests/: test_agents_imports.py  test_ai_assistant_harness_adaptation_skill.py  test_harness_reference_policy.py  test_improve_skill.py  test_marketplace_organization.py  (+3 more)
(+464 files in other folders)
